# shadowsocks-setup

./: .gitignore  .justfile  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: build.yaml
src/: args.rs  cipher.rs  github.rs  main.rs  state.rs  version.rs
src/install/: mod.rs  network.rs  rust.rs  shadowsocks.rs  xray.rs  xray_config.rs
src/install/input/: mod.rs  shadowsocks.rs  validate.rs  xray.rs
static/: acme-renew.sh  cert-renew.cron  domain-renew.cron  journald-tail.conf  journald.conf  nginx.conf  ssserver.service  sysctl-tail.conf  xray.json  xray.service  xray_01_api.json  xray_03_base.json  xray_05_main.json
static/test/: fake.crt  fake.key
