[package]
name = "shadowsocks-setup"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sssetup"
path = "src/main.rs"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = [ "derive", "wrap_help" ] }
pnet = "0.35.0"
serde_json = "1.0.149"
sudo = "0.6.0"
xshell = "0.2.7"
