[package]
name = "shadowsocks-setup"
version = "0.1.4"
edition = "2024"

[[bin]]
name = "sssetup"
path = "src/main.rs"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = [ "derive", "wrap_help" ] }
dialoguer = "0.12.0"
pnet = "0.35.0"
reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sudo = "0.6.0"
thiserror = "2.0.17"
xshell = "0.2.7"
