[package]
name = "shadowsocks-setup"
version = "0.2.0-pre.2"
edition = "2024"

[[bin]]
name = "sssetup"
path = "src/main.rs"

[features]
# for testing. to use this feature run "just gen-fake-cert"
fake-cert = []

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = [ "derive", "wrap_help" ] }
inquire = { version = "0.9.3", features = ["editor"] }
pnet = "0.35.0"
reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sudo = "0.6.0"
thiserror = "2.0.17"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = "0.3.22"
uuid = { version = "1.21.0", features = ["v4"] }
xshell = { version = "0.2.7", features = ["color-dollar"] }

[patch.crates-io]
xshell = { git = "https://github.com/istudyatuni/xshell", branch = "color-dollar" }
